--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "delay": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eosjs": "^22.1.0",
     "express": "^4.17.1",
     "int64-buffer": "^1.0.1",
