--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "delay": "^5.0.0",
-    "dotenv": "^16.0.3",
     "eosjs": "^22.1.0",
     "express": "^4.17.1",
     "int64-buffer": "^1.0.1",
